--- a/deploy/kubernetes/helm/che/custom-charts/che-keycloak/templates/deployment.yaml
+++ b/deploy/kubernetes/helm/che/custom-charts/che-keycloak/templates/deployment.yaml
@@ -35,15 +35,15 @@ spec:
                 fieldPath: metadata.namespace
       containers:
       - env:
-        - name: POSTGRES_PORT_5432_TCP_ADDR
+        - name: DB_ADDR
           value: postgres
-        - name: POSTGRES_PORT_5432_TCP_PORT
+        - name: DB_PORT
           value: "5432"
-        - name: POSTGRES_DATABASE
+        - name: DB_DATABASE
           value: keycloak
-        - name: POSTGRES_USER
+        - name: DB_USER
           value: keycloak
-        - name: POSTGRES_PASSWORD
+        - name: DB_PASSWORD
           value: keycloak
         - name: KEYCLOAK_USER
           value: admin
@@ -65,7 +65,6 @@ spec:
 {{- end }}
 
         image: {{ .Values.image }}
-        command: ["/scripts/kc_realm_user.sh"]
         imagePullPolicy: Always
         name: keycloak
         livenessProbe:
